--- a/cmms-backend/package.json
+++ b/cmms-backend/package.json
@@ -35,10 +35,11 @@
         "@nestjs/jwt": "^8.0.0",
         "@nestjs/passport": "^8.2.1",
         "@nestjs/platform-express": "^8.4.4",
-        "@nestjs/schedule": "^6.0.0",
+        "@nestjs/schedule": "^6.0.1",
         "@nestjs/swagger": "^5.2.1",
         "@nestjs/typeorm": "^8.0.3",
         "bcrypt": "^5.0.1",
+        "chrome-aws-lambda": "^10.1.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
         "compression": "^1.8.0",
@@ -58,6 +59,8 @@
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
         "pg": "^8.15.6",
+        "puppeteer": "^24.31.0",
+        "puppeteer-core": "^24.31.0",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.2",
         "swagger-ui-express": "^5.0.1",
