--- a/cmms-frontend/package.json
+++ b/cmms-frontend/package.json
@@ -21,12 +21,15 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "ajv": "^8.17.1",
+    "antd": "^6.0.0",
+    "axios": "^1.13.2",
     "dayjs": "^1.11.18",
     "dotenv": "^16.5.0",
     "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "material-ui": "^0.20.2",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -34,6 +37,7 @@
     "react-hook-form": "^7.51.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.0",
+    "styled-components": "^6.1.19",
     "typescript": "^4.9.5",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4",
