--- a/cmms-backend/package.json
+++ b/cmms-backend/package.json
@@ -35,9 +35,10 @@
         "@nestjs/jwt": "^8.0.0",
         "@nestjs/passport": "^8.2.1",
         "@nestjs/platform-express": "^8.4.4",
-        "@nestjs/schedule": "^6.0.1",
+        "@nestjs/schedule": "^6.1.0",
         "@nestjs/swagger": "^5.2.1",
         "@nestjs/typeorm": "^8.0.3",
+        "@types/pdfmake": "^0.2.12",
         "bcrypt": "^5.0.1",
         "chrome-aws-lambda": "^10.1.0",
         "class-transformer": "^0.5.1",
@@ -47,7 +48,10 @@
         "cookie-parser": "^1.4.7",
         "dayjs": "^1.11.18",
         "docx": "^9.5.1",
+        "docxtemplater": "^3.67.6",
+        "docxtemplater-image-module-free": "^1.1.1",
         "dotenv": "^16.0.0",
+        "exceljs": "^4.4.0",
         "express": "^4.18.1",
         "express-session": "^1.17.2",
         "factory.ts": "^1.1.0",
@@ -58,7 +62,9 @@
         "passport-custom": "^1.1.1",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
+        "pdfmake": "^0.3.2",
         "pg": "^8.15.6",
+        "pizzip": "^3.2.0",
         "puppeteer": "^24.31.0",
         "puppeteer-core": "^24.31.0",
         "reflect-metadata": "^0.2.2",
