--- a/cmms-frontend/package.json
+++ b/cmms-frontend/package.json
@@ -26,10 +26,13 @@
     "dayjs": "^1.11.18",
     "dotenv": "^16.5.0",
     "file-saver": "^2.0.5",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "material-ui": "^0.20.2",
     "moment": "^2.30.1",
+    "qrcode.react": "^4.2.0",
     "react": "18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
