feat: Update B05 layout, add Real-time polling, implement Bell Notifications

--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ JWT_REFRESH_TOKEN_EXPIRATION_TIME=86400
 API_DOCS=true
 DB_SYNCHRONIZE=false
 
-REACT_APP_BASE_URL=https://vcsairport.vn/api
+REACT_APP_BASE_URL=http://localhost.com:3000/
 
 EMAIL_USER=hai.nguyensinh@ncc.asia
 EMAIL_PASS='ulgi qxhh nafq fkal'
