--- a/cmms-backend/package.json
+++ b/cmms-backend/package.json
@@ -35,11 +35,16 @@
         "@nestjs/jwt": "^8.0.0",
         "@nestjs/passport": "^8.2.1",
         "@nestjs/platform-express": "^8.4.4",
+        "@nestjs/platform-socket.io": "^8.4.7",
         "@nestjs/schedule": "^6.1.0",
         "@nestjs/swagger": "^5.2.1",
+        "@nestjs/throttler": "^2.0.1",
         "@nestjs/typeorm": "^8.0.3",
+        "@nestjs/websockets": "^8.4.7",
+        "@types/cache-manager": "^4.0.0",
         "@types/pdfmake": "^0.2.12",
         "bcrypt": "^5.0.1",
+        "cache-manager": "^4.1.0",
         "chrome-aws-lambda": "^10.1.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
@@ -69,6 +74,7 @@
         "puppeteer-core": "^24.31.0",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.2",
+        "socket.io": "^4.8.3",
         "swagger-ui-express": "^5.0.1",
         "typeorm": "^0.3.27",
         "uuid": "^8.3.2",
