--- a/cmms-frontend/package.json
+++ b/cmms-frontend/package.json
@@ -30,7 +30,6 @@
     "jspdf-autotable": "^5.0.7",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
-
     "moment": "^2.30.1",
     "qrcode.react": "^4.2.0",
     "react": "18.2.0",
@@ -40,6 +39,7 @@
     "react-hook-form": "^7.51.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.0",
+    "socket.io-client": "^4.8.3",
     "styled-components": "^6.1.19",
     "typescript": "^4.9.5",
     "uuidv4": "^6.2.13",
