--- a/cmms-frontend/package.json
+++ b/cmms-frontend/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.18",
     "dotenv": "^16.5.0",
     "file-saver": "^2.0.5",
+    "html5-qrcode": "^2.3.8",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
     "jwt-decode": "^4.0.0",
