--- a/cmms-backend/package.json
+++ b/cmms-backend/package.json
@@ -67,6 +67,7 @@
         "passport-custom": "^1.1.1",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
+        "pdf-lib": "^1.17.1",
         "pdfmake": "^0.3.2",
         "pg": "^8.15.6",
         "pizzip": "^3.2.0",
