fix: install chromium in alpine docker and add error logging for pdf export

--- a/cmms-backend/Dockerfile
+++ b/cmms-backend/Dockerfile
@@ -13,8 +13,21 @@ WORKDIR /app
 
 ENV NODE_ENV=production
 
+
 COPY package.json yarn.lock ./
 RUN yarn install --frozen-lockfile --production
+
+# Install Chromium and dependencies for Puppeteer
+RUN apk add --no-cache \
+      chromium \
+      nss \
+      freetype \
+      harfbuzz \
+      ca-certificates \
+      ttf-freefont
+
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
+    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
 
 COPY --from=builder /app/dist ./dist
 
